# shoal

./: .envrc  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  flake.nix  hanao.cabal  pyproject.toml  shoal.cabal
fut/: aco.fut  ea.fut  futhark.pkg  gen.fut  monad.fut  score.fut  shoal.fut  state.fut  tsp.fut  types.fut  types.md
hs/: Hanao.hs  Shoal.hs
py/: main.py
