[tool.poetry]
name = "shoal"
version = "0.1.0"
description = "GPU accelerated swarm intelligence & other metaheuristics"
authors = ["daanrs daan@spijke.rs"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
