cabal-version:      2.4
name:               shoal
version:            0.1.0.0
author:             daanrs
maintainer:         daan@spijke.rs

library
    build-depends:
      , base
      , futhark
      , massiv
      , pipes
      , random

    hs-source-dirs: hs
    exposed-modules: Shoal
    default-language: Haskell2010
